crates/check.log
cargo :     Checking 
arbor-graph v0.1.1 (C:\Us
ers\Asus-2023\arbor\crate
s\arbor-graph)
At line:1 char:1
+ cargo check -p 
arbor-graph 2>&1 | 
Out-File -Encoding UTF8 
check.log
+ ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo       
       : NotSpecified:   
  (    Checking ar...e   
 s\arbor-graph):Strin    
g) [], RemoteExcepti    
on
    + FullyQualifiedErro 
   rId : NativeCommandE  
  rror
 
error[E0432]: unresolved 
imports 
`graph::GraphNode`, 
`graph::NodeInfo`
  --> arbor-graph\src\lib
.rs:40:29
   |
40 | pub use 
graph::{ArborGraph, 
GraphNode, NodeId, 
NodeInfo};
   |                     
        ^^^^^^^^^        
  ^^^^^^^^ no `NodeInfo` 
in `graph`
   |                     
        |
   |                     
        no `GraphNode` 
in `graph`
   |                     
        help: a similar 
name exists in the 
module: `GraphEdge`
   |
   = help: consider 
importing this struct 
instead:
           
crate::query::NodeInfo

error[E0432]: unresolved 
import 
`query::GraphQuery`
  --> arbor-graph\src\lib
.rs:41:32
   |
41 | pub use 
query::{DependentInfo, 
GraphQuery, 
ImpactResult, 
QueryResult};
   |                     
           ^^^^^^^^^^ no 
`GraphQuery` in `query`

error[E0282]: type 
annotations needed
  --> arbor-graph\src\bui
lder.rs:83:18
   |
83 |                 
(None, None, 
node.references.clone())
   |                  
^^^^ cannot infer type 
of the type parameter 
`T` declared on the enum 
`Option`
   |
help: consider 
specifying the generic 
argument
   |
83 |                 
(None::<T>, None, 
node.references.clone())
   |                     
 +++++

Some errors have 
detailed explanations: 
E0282, E0432.
For more information 
about an error, try 
`rustc --explain E0282`.
error: could not compile 
`arbor-graph` (lib) due 
to 3 previous errors
